--- a/architecture-diagram.cabal
+++ b/architecture-diagram.cabal
@@ -34,11 +34,19 @@ library
     ArchitectureDiagram.Data.Edge
     ArchitectureDiagram.Data.Graph
     ArchitectureDiagram.Console
+    ArchitectureDiagram.Console.Class
+    ArchitectureDiagram.Console.Types
+    ArchitectureDiagram.Console.Impl.Abstract
+    ArchitectureDiagram.FileManager.Class
   build-depends:
       base >= 4.7 && < 5
     , language-dot
     , text-conversions
     , text
+    , aeson
+    , containers
+    , bytestring
+    , mtl
   default-language:
     Haskell2010
 
@@ -53,6 +61,7 @@ executable architecture-diagram-generator
       base
     , architecture-diagram
     , language-dot
+    , aeson
   default-language:
     Haskell2010
 
@@ -70,10 +79,18 @@ test-suite architecture-diagram-test
     , text
     , text-conversions
     , hspec
+    , aeson
+    , test-fixture
+    , bytestring
+    , mtl
   ghc-options:
     -threaded -rtsopts -with-rtsopts=-N
   default-language:
     Haskell2010
+  default-extensions:
+    TypeSynonymInstances
+    FlexibleInstances
+    MultiParamTypeClasses
 
 source-repository head
   type:
