--- a/architecture-diagram.cabal
+++ b/architecture-diagram.cabal
@@ -37,6 +37,7 @@ library
     ArchitectureDiagram.Console.Class
     ArchitectureDiagram.Console.Types
     ArchitectureDiagram.Console.Generate
+    ArchitectureDiagram.Console.Impl.IO
   build-depends:
       base >= 4.7 && < 5
     , language-dot
@@ -46,6 +47,7 @@ library
     , containers
     , bytestring
     , mtl
+    , data-default
   default-language:
     Haskell2010
 
@@ -59,8 +61,10 @@ executable architecture-diagram-generator
   build-depends:
       base
     , architecture-diagram
-    , language-dot
     , aeson
+    , mtl
+    , language-dot
+    , transformers
   default-language:
     Haskell2010
 
@@ -82,6 +86,7 @@ test-suite architecture-diagram-test
     , test-fixture
     , bytestring
     , mtl
+    , data-default
   ghc-options:
     -threaded -rtsopts -with-rtsopts=-N
   default-language:
