--- a/architecture-diagram.cabal
+++ b/architecture-diagram.cabal
@@ -36,6 +36,7 @@ library
     ArchitectureDiagram.Console
     ArchitectureDiagram.Console.Class
     ArchitectureDiagram.Console.Types
+    ArchitectureDiagram.Console.Adapt
     ArchitectureDiagram.Console.Generate
     ArchitectureDiagram.Console.Impl.IO
   build-depends:
@@ -87,6 +88,7 @@ test-suite architecture-diagram-test
     , bytestring
     , mtl
     , data-default
+    , containers
   ghc-options:
     -threaded -rtsopts -with-rtsopts=-N
   default-language:
