--- a/architecture-diagram.cabal
+++ b/architecture-diagram.cabal
@@ -29,16 +29,15 @@ library
   hs-source-dirs:
     src
   exposed-modules:
-    ArchitectureDiagram.Data.ToStatement
     ArchitectureDiagram.Data.Node
     ArchitectureDiagram.Data.Edge
     ArchitectureDiagram.Data.Graph
     ArchitectureDiagram.Console
     ArchitectureDiagram.Console.Class
-    ArchitectureDiagram.Console.Types
-    ArchitectureDiagram.Console.Adapt
     ArchitectureDiagram.Console.Generate
     ArchitectureDiagram.Console.Impl.IO
+    ArchitectureDiagram.Source.Json
+    ArchitectureDiagram.Target.Dot
   build-depends:
       base >= 4.7 && < 5
     , language-dot
